front-end/push-notifications/kubernetes-manifests/network/network-policy.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-policy-ingress
  namespace: forecaster
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: ui
      port:
        number: 80
  rules:
    - host: forecaster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
  tls:
    - hosts:
        - forecaster.local
      secretName: forecaster-local-secret
